# ActiveTraceGestion

./: .gitignore  CHANGES.md  Comandos.md  Funcionalidad.md  TEST_COVERAGE_CHECKLIST.md  TEST_COVERAGE_REPORT.md  TEST_IMPLEMENTATION_SUMMARY.md  USUARIOS_DE_PRUEBA.md  docker-compose.yml
backend/: .coverage  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/activia_trace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260602_0001_tenant_foundation.py  20260602_0002_auth_foundation.py  20260602_0003_rbac_foundation.py  20260602_0004_estructura_academica.py  20260602_0005_usuarios_asignaciones.py  20260603_0006_padron_ingesta.py  (+10 more)
backend/app/: __init__.py  main.py
backend/scripts/: seed_dev_data.py
backend/tests/: conftest.py  test_analisis.py  test_app_startup.py  test_audit.py  test_auth_flow.py  test_auth_models.py  test_avisos.py  test_c17_api.py  test_c17_models.py  test_c17_repositories.py  test_c17_services.py  test_c18_api.py  test_c18_models.py  test_c18_repositories.py  test_c18_services.py  test_c19_panel_auditoria.py  test_c20_inbox.py  test_c20_perfil.py  test_calificaciones.py  test_coloquios.py  test_comunicaciones.py  test_config.py  test_database.py  test_encryption.py  test_encuentros.py  test_encuentros_api.py  test_equipos.py  test_estructura_academica.py  test_guardias.py  test_health.py  test_migrations_tenancy.py  test_models_tenancy.py  test_padron.py  test_rbac.py  test_repositories_tenancy.py  test_tareas_api.py  test_tareas_internas.py  test_usuarios_asignaciones.py
(+464 files in other folders)
